--- a/Assets/Level/UI Assets/UXML/New UI/USS/station.uss
+++ b/Assets/Level/UI Assets/UXML/New UI/USS/station.uss
@@ -4,6 +4,12 @@
     transition-timing-function: linear;
 }
 
+#screen-background {
+    transition-property: opacity;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in;
+}
+
 #station-contacts {
     transition-property: opacity;
     transition-duration: 0.2s;
